--- a/index.html
+++ b/index.html
@@ -8,26 +8,41 @@
     <style>
         body{
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            width: 100vh;
+            height: 100vh;
+            margin: 0 auto;
+            border: 1px solid salmon;
+            padding: 50px;
+            display: grid;
+            justify-content: center;
+            box-sizing: border-box;
+            align-content: center;
+            text-align: center;
         }
         #options_conatiner{
             display: grid;
             grid-template-columns: repeat(3, 0fr);
+            justify-content: center;
         }
         #options_conatiner > div{
             height: 100px;
             width: 100px;
-            margin: 5px;
+            margin: 10px;
             border-radius: 10px;
             cursor: pointer;
+        }
+        #options_conatiner > div:hover{
+            scale: 1.1 ;
+            transition: 0.4s all;
         }
     </style>
 </head>
 <body>
-    
+
     <div>
         <h1 id="color_code"></h1>
     </div>
-    <div>
+    <div style="padding: 20px; border: 5px dotted maroon;margin-bottom: 20px;">
         <h4>Score : <span id="score"></span></h4>
     </div>
 
