fixed responsive things

--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
     <style>
         body{
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            width: 100vh;
-            height: 100vh;
-            margin: 0 auto;
-            border: 1px solid salmon;
             padding: 50px;
             display: grid;
             justify-content: center;
@@ -42,7 +38,7 @@
     <div>
         <h1 id="color_code"></h1>
     </div>
-    <div style="padding: 20px; border: 5px dotted maroon;margin-bottom: 20px;">
+    <div style="margin: 20px; border: 5px dotted maroon;margin-bottom: 20px;">
         <h4>Score : <span id="score"></span></h4>
     </div>
 
